# ai-market-machine-ingestion

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json
app/: __init__.py
app/core/: db.py  (+6 more)
docs/: architecture.md  boundaries.md  breadth_observations_handoff_dry_run_validation.md  breadth_observations_ingestion_handoff_builder_discovery.md  breadth_participation_evidence_plan.md  breadth_participation_foundation.md  breadth_participation_preflight.md  breadth_participation_readiness_summary.md  breadth_participation_source_plan.md  breadth_participation_vertical_slice_plan.md  canonical_contract_runtime_enforcement.md  codex_rules.md  core_runtime.md  cross_asset_ohlcv_evidence_plan.md  cross_asset_ohlcv_foundation.md  cross_asset_ohlcv_preflight.md  cross_asset_ohlcv_readiness_summary.md  cross_asset_ohlcv_source_plan.md  cross_asset_ohlcv_vertical_slice_plan.md  cross_repo_boundary_cleanup_plan.md  cross_repo_boundary_overlap_audit.md  data_contracts.md  data_lineage_persistence.md  data_quality_result_persistence.md  data_read_client_contract.md  data_read_client_live_verification_plan.md  deep_architecture_review_ai_market_machine_ingestion.md  domain_planning_sweep_completion_summary.md  domain_vertical_slice_template.md  earnings_calendar_foundation.md  earnings_calendar_readiness_summary.md  earnings_calendar_source_plan.md  earnings_calendar_vertical_slice_plan.md  etf_index_universe_expansion_foundation.md  etf_index_universe_expansion_plan.md  etf_index_universe_verification.md  event_calendar_evidence_plan.md  event_calendar_foundation.md  (+266 more)
(+978 files in other folders)
